# safe-vk

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yaml
examples/: keyboard.rs  members.rs  reply.rs
examples/comfyui/: Cargo.toml  workflow_api.json
examples/comfyui/src/: custom_bindings.rs  main.rs
examples/keyboard/: Cargo.toml
examples/keyboard/src/: main.rs
examples/macros/: Cargo.toml
examples/macros/src/: main.rs
examples/members/: Cargo.toml
examples/members/src/: main.rs
examples/oobabooga/: Cargo.toml
examples/oobabooga/src/: main.rs
examples/reply/: Cargo.toml
examples/reply/src/: main.rs
examples/state/: Cargo.toml
examples/state/src/: main.rs
safe-vk/: Cargo.toml  README.md
safe-vk-common/: Cargo.toml
safe-vk-common/src/: error.rs  keyboard.rs  lib.rs  matchit.rs  ndarray.rs
safe-vk-macros/: Cargo.toml
safe-vk-macros/src/: lib.rs
safe-vk/src/: lib.rs  macros.rs  reqwest_ext.rs  start_polling.rs
safe-vk/src/api/: bindings.rs  messages.rs  mod.rs  photos.rs  users.rs
safe-vk/src/api/messages/: abstraction.rs  methods.rs  responses.rs
safe-vk/src/api/photos/: abstraction.rs  methods.rs  responses.rs
safe-vk/src/api/users/: abstraction.rs  methods.rs  mod.rs  responses.rs
safe-vk/src/extract/: ctx.rs  keyboard.rs  mod.rs  state.rs
safe-vk/src/handler/: mod.rs
safe-vk/src/responses/: attachment.rs  button.rs  event_answer.rs  longpoll.rs  member.rs  message.rs  mod.rs
safe-vk/src/responses/events/: messages.rs  mod.rs  photos.rs
safe-vk/src/routing/: adapter.rs  mod.rs  route.rs  route_method.rs  router.rs
safe-vk/src/service/: boxed_clone.rs  future.rs  map_future.rs  mod.rs
safe-vk/tests/: lib.rs
src/: engine.rs  error.rs  keyboard.rs  lib.rs  methods.rs  reqwest_ext.rs  storage.rs
src/responses/: longpoll.rs  member.rs  mod.rs  update.rs  user.rs
src/traits/: button.rs  methods.rs  mod.rs  reqwest_ext.rs
src/util/: error.rs  mod.rs  ndarray.rs
