[package]
name = "safe-vk-common"
version = "0.1.0"
edition = "2021"
keywords = ["safe-vk"]
license-file = "LICENSE"
repository = "https://github.com/azumi4han/safe-vk"

[fetures]
default = ["tokio"]

[dependencies]
thiserror = "1.0.56"
serde_json = "1.0.111"
regex = "1.10.3"
serde = { version = "1.0.195", features = ["derive"] }
reqwest = { version = "0.11.23" }

