[package]
name = "comfyui"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
safe-vk = { path = "../../safe-vk" }
serde_json = "1"
serde = { version = "1", feature = ["derive"] }
reqwest = { version = "0.12.4", features = ["multipart", "json"] }
tokio = { version = "1.0", features = ["full"] }
